feat(商城): 升级至Springboot2.7+