@@ -6,6 +6,7 @@ import lombok.extern.slf4j.Slf4j;
 import javax.servlet.http.HttpServletRequest;
 import java.io.*;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.text.DecimalFormat;
 
 /**
@@ -15,7 +16,7 @@ import java.text.DecimalFormat;
  */
 @Slf4j
 public class FileUtils extends org.apache.commons.io.FileUtils {
-    public static String FILENAME_PATTERN = "[a-zA-Z0-9_\\-\\|\\.\\u4e00-\\u9fa5]+";
+    public static String FILENAME_PATTERN = "[a-zA-Z0-9_\\-|.\\u4e00-\\u9fa5]+";
 
     private static int counter = 0;
 
@@ -111,17 +112,17 @@ public class FileUtils extends org.apache.commons.io.FileUtils {
         String filename = fileName;
         if (agent.contains("MSIE")) {
             // IE浏览器
-            filename = URLEncoder.encode(filename, "utf-8");
+            filename = URLEncoder.encode(filename, StandardCharsets.UTF_8);
             filename = filename.replace("+", " ");
         } else if (agent.contains("Firefox")) {
             // 火狐浏览器
             filename = new String(fileName.getBytes(), "ISO8859-1");
         } else if (agent.contains("Chrome")) {
             // google浏览器
-            filename = URLEncoder.encode(filename, "utf-8");
+            filename = URLEncoder.encode(filename, StandardCharsets.UTF_8);
         } else {
             // 其它浏览器
-            filename = URLEncoder.encode(filename, "utf-8");
+            filename = URLEncoder.encode(filename, StandardCharsets.UTF_8);
         }
         return filename;
     }
@@ -150,9 +151,9 @@ public class FileUtils extends org.apache.commons.io.FileUtils {
         String temp = null;
         while (true) {
             try {
-                if (!((temp = br.readLine()) != null)) break;
+                if ((temp = br.readLine()) == null) break;
             } catch (IOException e) {
-                log.error(e.getMessage(), e);;
+                log.error(e.getMessage(), e);
             }
             content.append(temp);
         }
